+ lang folder for languages and empty deDe.yml for German. + right now not finished code to load the language + config.yml has new key: language + config.yml some explanation + sorted a bit
- worlds.yml no longer necessary

Signed-off-by: FroznMine <pesafrre@arcor.de>

--- a/yml/config.yml
+++ b/yml/config.yml
@@ -1,6 +1,16 @@
+# in which worlds you shouldn't be able to build
 dontUse:
   - world1
+  
+# in which worlds you shouldn't be able to build
 dontBuild:
   - world1_the_end
+ 
+# in which worlds you shouldn't be able to build
 dontBreak:
   - world1_nether
+  
+# which language should the plugin use
+# possible at the moment:
+# - deDE = Deutsch
+language: deDE
