--- a/yml/plugin.yml
+++ b/yml/plugin.yml
@@ -1,5 +1,5 @@
-name: EasyWorldProtect
-version: A0.1_B1
+name: EWOP
+version: A0.1_B2
 description: With this plugin you can protect your server worlds!
 author: FroznMine
 main: de.froznmine.ewop.Main
