Changed Version to B0.2_B1!

--- a/yml/plugin.yml
+++ b/yml/plugin.yml
@@ -1,5 +1,5 @@
 name: EWOP
-version: A0.1_B2
+version: B0.2_B1
 description: With this plugin you can protect your server worlds!
 author: FroznMine
 main: de.froznmine.ewop.Main
